[gd_scene load_steps=10 format=2]

[ext_resource path="res://hud/level_complete_overlay/LevelCompleteOverlay.gd" type="Script" id=1]
[ext_resource path="res://art/temp_theme.tres" type="Theme" id=2]
[ext_resource path="res://fonts/Roboto/Roboto-BlackItalic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/Roboto/Roboto-Medium.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://art/empty_star.png" type="Texture" id=5]
[ext_resource path="res://art/filled_star.png" type="Texture" id=6]
[ext_resource path="res://audio/ld-52-victory_v1.wav" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 58
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 4 )

[node name="LevelCompleteOverlay" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -400.0
margin_bottom = -200.0
grow_horizontal = 2
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 624.0
margin_bottom = 400.0
theme = ExtResource( 2 )

[node name="Title" type="Label" parent="Panel"]
margin_right = 624.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 1 )
text = "HARVEST COMPLETE"
align = 1
clip_text = true

[node name="Score" type="Label" parent="Panel"]
margin_left = 212.0
margin_top = 82.0
margin_right = 412.0
margin_bottom = 161.0
grow_horizontal = 2
rect_pivot_offset = Vector2( 100, 0 )
custom_fonts/font = SubResource( 2 )
text = "Score:
00000"
align = 1

[node name="StarProgress" type="TextureProgress" parent="Panel"]
margin_left = 203.0
margin_top = 173.0
margin_right = 1103.0
margin_bottom = 473.0
rect_scale = Vector2( 0.25, 0.25 )
max_value = 300.0
value = 3.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )

[node name="NextStar" type="Label" parent="Panel"]
margin_left = 212.0
margin_top = 257.0
margin_right = 412.0
margin_bottom = 336.0
grow_horizontal = 2
rect_pivot_offset = Vector2( 100, 0 )
custom_fonts/font = SubResource( 2 )
text = "Next Star at:
00000"
align = 1

[node name="LevelSelectButton" type="Button" parent="Panel"]
margin_left = 231.0
margin_top = 352.0
margin_right = 393.0
margin_bottom = 377.0
size_flags_horizontal = 0
text = "Back To Level Select"

[node name="Music_Victory" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="pressed" from="Panel/LevelSelectButton" to="." method="_on_LevelSelectButton_pressed"]
